Curriculo sem Estilo

--- a/html/Curriculo.html
+++ b/html/Curriculo.html
@@ -5,22 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
-    <link href="./css/curriculo.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/9476/9476885.png">
     <title>Currículo Fabrício Dias</title>
 </head>
 
 <body>
-    <div id="apresentacao"><!--nome, foto-->
+    <!--Apresentação do Currículo, mostrando a Foto e o Nome-->
+    <div id="apresentacao">
+        <center>
         <h1>Fabrício Dias da Silva</h1>
-        <img src="./img/fabrício foto.jpg" width="200" weight="200">
+        <img src="../img/fabrício foto.jpg" width="200" weight="200">
+    </center>
         <hr>
     </div>
 
-    <div id="dpessoal"><!--email, telefone, linkedin, github-->
+    <!--Dados Pessoais-->
+    <div id="dpessoal">
         <h3>Dados Pessoais</h3>
         <ul>
             <li><b>Email:</b> fabriciodsilva3404@gmail.com</li>
@@ -38,15 +37,16 @@
         <hr>
     </div>
 
+    <!--Aba Sobre, mostrando experiências academicas-->
     <div id="sobre">
         <h2>Sobre:</h2>
         <p>Graduação em Andamento em Analise e Desenvolvimento de Sistemas pela Faculdade SENAC Pernambuco, Aluno do
-            Projeto START 2022 pela turma Java onde foi criando uma aplicação WEB usando o Framework SpringBoot junto ao
-            Thymeleaf
+            Projeto START 2022 pela turma Java onde foi criando uma aplicação WEB usando o Framework SpringBoot junto a HTML e CSS
         </p>
         <hr>
     </div>
 
+    <!--Formações Academicas-->
     <div id="formAcad">
         <h2>Formação Acadêmica:</h2>
         <br>
@@ -75,6 +75,7 @@
         <hr>
     </div>
 
+    <!--Formações Complementares-->
     <div id="formacaoComp">
         <h2>Formação Complementar:</h2>
         <ol>
@@ -84,10 +85,11 @@
         <hr>
     </div>
 
+    <!--Portfólio-->
     <div>
         <address>
-            Desenvolvido:<a href="fabriciodsilva3404@gmail.com"> Fabrício Dias</a>.<br>
-            Rua Correntinas, 35<br>Recife, PE - Brasil
+            Desenvolvido por:<a href="fabriciodsilva3404@gmail.com"> Fabrício Dias</a>.<br>
+            Morro da Conceição<br>Recife, PE - Brasil
         </address>
     </div>
 </body>
