Aula Frameworks Css

--- a/Aula_CSS/curriculo_bootstrap/html/CurriculoB.html
+++ b/Aula_CSS/curriculo_bootstrap/html/CurriculoB.html
@@ -6,23 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Fabrício Dias</title>
-    <link href="../css/curriculo.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <session id="info">
+    <session>
     <!--Apresentação do Currículo, mostrando a Foto e o Nome-->
-    <div id="apresentacao" class="curriculo">
+    <div>
             <h1>Fabrício Dias da Silva</h1>
             <img src="../img/fabrício foto.jpg" width="200" weight="200">
         <hr>
     </div>
 
     <!--Dados Pessoais-->
-    <div id="dpessoal">
+    <div>
         <h3>Dados Pessoais</h3>
         <ul>
             <li><b>Email:</b> fabriciodsilva3404@gmail.com</li>
@@ -41,7 +39,7 @@
     </div>
 
     <!--Aba Sobre, mostrando experiências academicas-->
-    <div id="sobre">
+    <div>
         <h2>Sobre:</h2>
         <p>Graduação em Andamento em Analise e Desenvolvimento de Sistemas pela Faculdade SENAC Pernambuco, Aluno do
             Projeto START 2022 pela turma Java onde foi criando uma aplicação WEB usando o Framework SpringBoot junto a
@@ -51,58 +49,54 @@
     </div>
 
     <!--Formações Academicas-->
-    <div id="formAcad" class="curriculo">
+    <div>
         <h2>Formação Acadêmica:</h2>
         <br>
-        <center>
-            <table id="tabelaForm">
-                <tr id="tabelaTitulo">
+            <table>
+                <tr>
                     <th>Curso</th>
                     <th>Instituição</th>
                     <th>Período</th>
                 </tr>
 
-                <tr id="tabelaDados">
+                <tr>
                     <td>Gradução em Analise e Desenvolvimento de Sistemas</td>
                     <td>Faculdade SENAC PE</td>
                     <td>2022-2024</td>
                 </tr>
 
-                <tr id="tabelaDados">
+                <tr>
                     <td>Projeto START Recife (Turma JAVA)</td>
                     <td>Rede Cidadã</td>
                     <td>2022</td>
                 </tr>
 
             </table>
-        </center>
         <hr>
     </div>
 
     <!--Formações Complementares-->
-    <div id="formacaoComp">
         <h2>Formação Complementar:</h2>
-        <center>
-        <table id="tabelaForm">    
-                <tr id="tabelaTitulo">
+
+        <table>    
+                <tr>
                     <th>Curso</th>
                     <th>Instituição</th>
                     <th>Período</th>
                 </tr>
 
-                <tr id="tabelaDados">
+                <tr>
                     <td>Logica de Programação Essencial</td>
                     <td>DIO</td>
                     <td>2022</td>
                 </tr>
 
-                <tr id="tabelaDados">
+                <tr>
                     <td>Treinamento Online em Java</td>
                     <td>Americanas</td>
                     <td>2022</td>
                 </tr>
         </table>
-    </center>
         <hr>
     </div>
 
